--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   , "description": "Resourceful routing for express"
   , "version": "0.0.2"
   , "author": "TJ Holowaychuk <tj@vision-media.ca>"
+  , "contributors": [
+    { "name": "Daniel Gasienica", "email": "daniel@gasienica.ch" }
+  ]
   , "keywords": ["express", "rest", "resource"]
   , "main": "index"
   , "engines": { "node": ">= 0.2.0" }
