--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "support/should"]
 	path = support/should
 	url = git://github.com/visionmedia/should.js.git
+[submodule "support/lingo"]
+	path = support/lingo
+	url = git://github.com/visionmedia/lingo.git
