--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "support/lingo"]
 	path = support/lingo
 	url = git://github.com/visionmedia/lingo.git
+[submodule "support/qs"]
+	path = support/qs
+	url = git://github.com/visionmedia/node-querystring.git
