--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
     { "name": "Daniel Gasienica", "email": "daniel@gasienica.ch" }
   ]
   , "dependencies": { "lingo": ">= 0.0.4" }
+  , "devDependencies": {
+      "connect": "1.4.x"
+    , "express": "2.3.x"
+    , "ejs": "0.4.x"
+    , "expresso": "0.7.x"
+    , "lingo": "0.0.4"
+    , "qs": "0.1.x"
+    , "should": ">= 0.0.1"
+  }
   , "keywords": ["express", "rest", "resource"]
   , "main": "index"
   , "engines": { "node": ">= 0.2.0" }
