--- a/package.json
+++ b/package.json
@@ -1,21 +1,36 @@
-{   "name": "express-resource"
-  , "description": "Resourceful routing for express"
-  , "version": "0.2.4"
-  , "homepage": "https://github.com/visionmedia/express-resource"
-  , "author": "TJ Holowaychuk <tj@vision-media.ca>"
-  , "contributors": [
-    { "name": "Daniel Gasienica", "email": "daniel@gasienica.ch" }
-  ]
-  , "dependencies": { "lingo": ">= 0.0.4" }
-  , "devDependencies": {
-      "connect": "1.8.x"
-    , "express": "2.5.x"
-    , "ejs": "0.4.x"
-    , "expresso": "0.9.x"
-    , "qs": "0.1.x"
-    , "should": "*"
+{
+  "name": "express-resource",
+  "description": "Resourceful routing for express",
+  "version": "0.2.4",
+  "homepage": "https://github.com/visionmedia/express-resource",
+  "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "contributors": [
+    {
+      "name": "Daniel Gasienica",
+      "email": "daniel@gasienica.ch"
+    }
+  ],
+  "dependencies": {
+    "lingo": ">= 0.0.4",
+    "methods": "0.0.1",
+    "debug": "*"
+  },
+  "devDependencies": {
+    "connect": "2.x",
+    "express": "3.x",
+    "ejs": "0.4.x",
+    "qs": "0.1.x",
+    "mocha": "*",
+    "should": "*",
+    "supertest": "0.1.2"
+  },
+  "keywords": [
+    "express",
+    "rest",
+    "resource"
+  ],
+  "main": "index",
+  "engines": {
+    "node": "*"
   }
-  , "keywords": ["express", "rest", "resource"]
-  , "main": "index"
-  , "engines": { "node": ">= 0.2.0" }
 }
