--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
   "main": "index",
   "engines": {
     "node": "*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/visionmedia/express-resource.git"
   }
 }
