--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     }
   ],
   "dependencies": {
-    "lingo": ">= 0.0.4",
-    "methods": "0.0.1",
-    "debug": "*"
+    "debug": "^1.0.0",
+    "lingo": "0.0.5",
+    "methods": "^1.0.1"
   },
   "devDependencies": {
-    "connect": "2.x",
-    "express": "3.x",
-    "ejs": "0.4.x",
-    "qs": "0.1.x",
-    "mocha": "*",
-    "should": "*",
-    "supertest": "0.1.2"
+    "body-parser": "^1.3.0",
+    "connect": "^2.19.3",
+    "ejs": "^1.0.0",
+    "express": "^4.4.1",
+    "mocha": "^1.20.1",
+    "qs": "^0.6.6",
+    "should": "^4.0.1",
+    "supertest": "^0.13.0"
   },
   "keywords": [
     "express",
@@ -36,5 +37,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/visionmedia/express-resource.git"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
